force-app/main/default/objects/Activity/fields/Ad_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Ad_Recieved__c</fullName>
    <label>Ad Recieved</label>
    <type>Date</type>
</CustomField>