force-app/main/default/objects/Activity/fields/Ad_Size__c.field-meta.xml
<CustomField>
    <fullName>Ad_Size__c</fullName>
    <label>Ad Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Black/White</fullName>
            </value>
            <value>
                <fullName>1/2 Black/White</fullName>
            </value>
            <value>
                <fullName>1/4 Black/White</fullName>
            </value>
            <value>
                <fullName>Full Color</fullName>
            </value>
            <value>
                <fullName>1/2 Color</fullName>
            </value>
            <value>
                <fullName>1/4 Color</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>