force-app/main/default/objects/Activity/fields/Assigned_to_Opty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Opty_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The moment the task is created and assigned to the opportunity owner this field is checked.</description>
    <label>Assigned to Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>