force-app/main/default/objects/Activity/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description>How many people actually attended the event</description>
    <label># Attended</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>