force-app/main/default/objects/Activity/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Who is the training ment for?  Who is the audience, some information to customize the message of the training.</description>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>ASA Staff Only</fullName>
            </value>
            <value>
                <fullName>Bursar/SFS</fullName>
            </value>
            <value>
                <fullName>Intemediate</fullName>
            </value>
            <value>
                <fullName>Lender Clients</fullName>
            </value>
            <value>
                <fullName>Lender Ops</fullName>
            </value>
            <value>
                <fullName>Lender Rep&#39;s</fullName>
            </value>
            <value>
                <fullName>Mixed Knowledge Level</fullName>
            </value>
            <value>
                <fullName>Novice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>School Clients</fullName>
            </value>
            <value>
                <fullName>Servicer Ops</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>VIP&#39;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>