force-app/main/default/objects/Activity/fields/Delivery_Typer__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Typer__c</fullName>
    <description>How with the students revieve the Newsletter?</description>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>