force-app/main/default/objects/Activity/fields/Demo_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_Time__c</fullName>
    <description>This field shows the date and the time for the product demonstration.</description>
    <inlineHelpText>This field shows the date and the time for the product demonstration.</inlineHelpText>
    <label>Demo Date/Time</label>
    <type>DateTime</type>
</CustomField>