force-app/main/default/objects/Activity/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <formula>IF(IsTask,false,true)</formula>
    <label>Event</label>
    <type>Checkbox</type>
</CustomField>