force-app/main/default/objects/Activity/fields/Expected_of_Grad_s__c.field-meta.xml
<CustomField>
    <fullName>Expected_of_Grad_s__c</fullName>
    <description>Number of expected graduates that will be receiving the co branded newsletter</description>
    <label>Expected # of Grads</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>