force-app/main/default/objects/Activity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>The date of the interview also Status should be moved to Interview Scheduled.</description>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>