force-app/main/default/objects/Activity/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <description>Invoice for sponsorship sent on this date</description>
    <label>Invoice Sent</label>
    <type>Date</type>
</CustomField>