force-app/main/default/objects/Activity/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>How much time does the trainer have for this particulate session or workshop</description>
    <label>Session Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45 Min</fullName>
            </value>
            <value>
                <fullName>60 Min</fullName>
            </value>
            <value>
                <fullName>75 Min</fullName>
            </value>
            <value>
                <fullName>90 Min</fullName>
            </value>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>1/2 Day Morning</fullName>
            </value>
            <value>
                <fullName>1/2 Day Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>