force-app/main/default/objects/Activity/fields/Not_Assigned_to_Opty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Not_Assigned_to_Opty_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Not Assigned to Opty Owner</label>
    <type>Checkbox</type>
</CustomField>