force-app/main/default/objects/Activity/fields/OE_Code__c.field-meta.xml
<CustomField>
    <fullName>OE_Code__c</fullName>
    <label>OE Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>