force-app/main/default/objects/Activity/fields/Other_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Other_Trainer__c</fullName>
    <description>Another person that may be training from ASA that does usually.</description>
    <label>Other Trainer</label>
    <type>TextArea</type>
</CustomField>