force-app/main/default/objects/Activity/fields/Payment_Rcvd__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rcvd__c</fullName>
    <description>Date sponsorship payment was recieved</description>
    <label>Payment Rcvd</label>
    <type>Date</type>
</CustomField>