force-app/main/default/objects/Activity/fields/Payment_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recieved__c</fullName>
    <label>Payment Recieved</label>
    <type>Date</type>
</CustomField>