force-app/main/default/objects/Activity/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <formula>Previous_Owner_Id__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Owner</label>
    <type>Text</type>
</CustomField>