force-app/main/default/objects/Activity/fields/Previous_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Owner Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>