force-app/main/default/objects/Activity/fields/Product_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Management_Comments__c</fullName>
    <inlineHelpText>This field holds instructions to the requestor related to the product demonstration.</inlineHelpText>
    <label>Product Management Comments</label>
    <type>TextArea</type>
</CustomField>