force-app/main/default/objects/Activity/fields/Purpose_of_Visit_Other__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit_Other__c</fullName>
    <label>Purpose of Visit - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>