force-app/main/default/objects/Activity/fields/Related_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to Opportunity</label>
    <type>Checkbox</type>
</CustomField>