force-app/main/default/objects/Activity/fields/RT1__ReadytalkAttendanceID__c.field-meta.xml
<CustomField>
    <fullName>RT1__ReadytalkAttendanceID__c</fullName>
    <externalId>true</externalId>
    <label>Readytalk Attendance ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>