force-app/main/default/objects/Activity/fields/Service_type__c.field-meta.xml
<CustomField>
    <fullName>Service_type__c</fullName>
    <description>required for CPS activities to support programs and contracts</description>
    <label>Service type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT/SAT Registration</fullName>
            </value>
            <value>
                <fullName>Admissions Advising</fullName>
            </value>
            <value>
                <fullName>Admissions Advocacy</fullName>
            </value>
            <value>
                <fullName>Admissions Application Assistance</fullName>
            </value>
            <value>
                <fullName>Admissions Application Fee Waiver</fullName>
            </value>
            <value>
                <fullName>Admissions Info</fullName>
            </value>
            <value>
                <fullName>Attendance Support</fullName>
            </value>
            <value>
                <fullName>Career Exploration/Planning</fullName>
            </value>
            <value>
                <fullName>Career Interest Inventory/Assessment</fullName>
            </value>
            <value>
                <fullName>Classroom Workshops</fullName>
            </value>
            <value>
                <fullName>College Visits</fullName>
            </value>
            <value>
                <fullName>Community Events</fullName>
            </value>
            <value>
                <fullName>Community Service Project</fullName>
            </value>
            <value>
                <fullName>Cultural Field-trip</fullName>
            </value>
            <value>
                <fullName>Education Advising</fullName>
            </value>
            <value>
                <fullName>Educational Field-trip</fullName>
            </value>
            <value>
                <fullName>Financial Aid Advising</fullName>
            </value>
            <value>
                <fullName>Financial Aid Advocacy</fullName>
            </value>
            <value>
                <fullName>Financial Aid Application Assistance</fullName>
            </value>
            <value>
                <fullName>Financial Aid Info</fullName>
            </value>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>Loan Assistance</fullName>
            </value>
            <value>
                <fullName>MCAS/SAT Preparation</fullName>
            </value>
            <value>
                <fullName>Parent Events</fullName>
            </value>
            <value>
                <fullName>Presentations/Workshops</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Residential Summer Program</fullName>
            </value>
            <value>
                <fullName>Scholarship Search</fullName>
            </value>
            <value>
                <fullName>Senior Advising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>