force-app/main/default/objects/Activity/fields/Signage__c.field-meta.xml
<CustomField>
    <fullName>Signage__c</fullName>
    <description>What sort of Signage will be at the sponsors table</description>
    <label>Signage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sign</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>