force-app/main/default/objects/Activity/fields/Sponsored_Items__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Items__c</fullName>
    <description>What is being sponsored</description>
    <label>Sponsored Items</label>
    <type>TextArea</type>
</CustomField>