force-app/main/default/objects/Activity/fields/Sponsorship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Amount__c</fullName>
    <description>How much is the sponsorhsip cost</description>
    <label>Sponsorship Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>