force-app/main/default/objects/Activity/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <description>When is the training for, please specify when the training is requested for from today the day the request is put in.  ex: You are requesting the training for July and today is May 1st.  60-90 days.</description>
    <label>Time Frame/When</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASAP (next 30 days)</fullName>
            </value>
            <value>
                <fullName>30-60 Days</fullName>
            </value>
            <value>
                <fullName>60-90 Days</fullName>
            </value>
            <value>
                <fullName>90+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>