force-app/main/default/objects/Activity/fields/WebExECMtgKey__c.field-meta.xml
<CustomField>
    <fullName>WebExECMtgKey__c</fullName>
    <description>The field holds WebEx Event Center Meeting Key</description>
    <label>WebEx Event Center Meeting Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>