force-app/main/default/objects/Activity/fields/Why_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Why_Reassigned__c</fullName>
    <label>Why Reassigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skillset</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Manager Reassignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>