force-app/main/default/objects/Activity/fields/x2nd_Trainer__c.field-meta.xml
<CustomField>
    <fullName>x2nd_Trainer__c</fullName>
    <description>Other trainers involved with the event  NOTE:  Assinged TO: is the primary trainer</description>
    <label>2nd Trainer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Betsy Mayotte</fullName>
            </value>
            <value>
                <fullName>Brad Finger</fullName>
            </value>
            <value>
                <fullName>Brendan Furey</fullName>
            </value>
            <value>
                <fullName>Duane Quinn</fullName>
            </value>
            <value>
                <fullName>Gina Lucente-Cole</fullName>
            </value>
            <value>
                <fullName>Gretchen Bonfardine</fullName>
            </value>
            <value>
                <fullName>Jason Burke</fullName>
            </value>
            <value>
                <fullName>Jennifer Schott</fullName>
            </value>
            <value>
                <fullName>Martie Adler</fullName>
            </value>
            <value>
                <fullName>Nancy Jordan</fullName>
            </value>
            <value>
                <fullName>Sabrina Mainini</fullName>
            </value>
            <value>
                <fullName>Shawn Monk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>