force-app/main/default/objects/Activity/fields/Years_w_ASA__c.field-meta.xml
<CustomField>
    <fullName>Years_w_ASA__c</fullName>
    <description>How many years has the school been a client with ASA</description>
    <label>Years w/ ASA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>